--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "sketch-preview",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Sketch UI Generator",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/gulp/bin/gulp.js build"
